Update texture and image sizes code.ipynb

--- a/src/texture and image sizes code.ipynb
+++ b/src/texture and image sizes code.ipynb
@@ -41,7 +41,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# path to the a01-000u folder\n",
-    "folder_path = r'C:\\Users\\omish\\Desktop\\DS4002\\DS4002Project2\\dataset\\IAM Dataset\\iam_words\\words\\a01\\a01-000u'  \n",
+    "folder_path = r'C:Desktop\\DS4002\\DS4002Project2\\dataset\\IAM Dataset\\iam_words\\words\\a01\\a01-000u'  \n",
     "\n",
     "# array for features\n",
     "array_features = np.zeros(7)\n",
